test/Fail/ConflictingRelevance4.err
ConflictingRelevance4.agda:4.38: error: [ParseError]
Conflicting attribute: @relevant
